maze.pledge.PledgeMaze.scala.code
override def run() {
  var cmpt:Int = 0
  while(!estSurBiscuit){
    if((isDirectionNotFree(Direction.NORTH))&&(!cmpt==0)) {
      cmpt = keepHandOnSideWall() + cmpt
    } else {
      setDirection(Direction.NORTH)
      avance()
    }
  }
  prendBiscuit()
}



def keepHandOnSideWall():Int = {
  var dir:Int = 0
  gauche()
  dir = dir + 1
  if (estFaceMur()){
    droite()
    dir = dir -1
  }
  if (estFaceMur()){
    droite()
    dir = dir -1
  }
  if (estFaceMur()){
    droite()
    dir = dir -1
  }
  avance()
  return dir
}

def isDirectionNotFree(dir:Direction):Boolean = {
  var tmp:Direction = getDirection()
  setDirection(dir)
  if (estFaceMur) {
    setDirection(tmp)
    return true
  } else {
    setDirection(tmp)
    return false
  }
}